[gd_scene load_steps=46 format=3 uid="uid://b1hnbafxlnpbo"]

[ext_resource type="Script" path="res://src/boss.gd" id="1_a0cd8"]
[ext_resource type="Texture2D" uid="uid://car5tkpbpn5qj" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/1.png" id="1_r7s8l"]
[ext_resource type="Script" path="res://src/final_level/head_level.gd" id="2_3x8mr"]
[ext_resource type="Texture2D" uid="uid://chxl3wr5fej74" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/2.png" id="2_koc8a"]
[ext_resource type="Texture2D" uid="uid://dxglt0knyoj52" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/3.png" id="3_visub"]
[ext_resource type="Texture2D" uid="uid://e4drx44wsapc" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/4.png" id="4_pxxj2"]
[ext_resource type="Texture2D" uid="uid://d2fp030f5cga4" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/5.png" id="5_gtvdf"]
[ext_resource type="Texture2D" uid="uid://d30l886yp31qi" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/6.png" id="6_n5iax"]
[ext_resource type="Texture2D" uid="uid://dtdvpboaxm2n8" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Idle 1/1.png" id="7_un06b"]
[ext_resource type="Texture2D" uid="uid://btvnv4scu6q5h" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/1.png" id="8_6lqgv"]
[ext_resource type="Texture2D" uid="uid://vrbqhw2i5rtl" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/1.png" id="8_f0dvw"]
[ext_resource type="Texture2D" uid="uid://78847ek7scq7" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/2.png" id="9_kraf4"]
[ext_resource type="Texture2D" uid="uid://o5pw06udar2a" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/2.png" id="9_wcry7"]
[ext_resource type="Texture2D" uid="uid://cw7b6e0032wnk" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/3.png" id="10_02x2e"]
[ext_resource type="Texture2D" uid="uid://d2a1mrlkep2hk" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/3.png" id="10_r5fxq"]
[ext_resource type="Texture2D" uid="uid://ccqui8jqjfr1o" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/4.png" id="11_dlwpw"]
[ext_resource type="Texture2D" uid="uid://c5as3gtscn5fl" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/4.png" id="11_qf4qv"]
[ext_resource type="Texture2D" uid="uid://on17sd1n1h1s" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/5.png" id="12_0655c"]
[ext_resource type="Texture2D" uid="uid://b6ab222277y2r" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/6.png" id="13_eydup"]
[ext_resource type="Script" path="res://src/final_level/mid_level.gd" id="14_t42st"]
[ext_resource type="Texture2D" uid="uid://ddrtib1xca2ra" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Idle 2/1.png" id="14_y8f3u"]
[ext_resource type="Texture2D" uid="uid://bavsx1vtioapn" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/1.png" id="15_wfmrl"]
[ext_resource type="Texture2D" uid="uid://bbyr3c2xx5t87" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/2.png" id="16_wgv3m"]
[ext_resource type="Texture2D" uid="uid://c7rm0ngltkxlb" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/3.png" id="17_a8p7a"]
[ext_resource type="Texture2D" uid="uid://b17tw8akk8dj7" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/4.png" id="18_ioqui"]
[ext_resource type="Texture2D" uid="uid://bpd45vdei36el" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 2/1.png" id="19_4diou"]
[ext_resource type="Texture2D" uid="uid://7000e0715pj0" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/5.png" id="19_v1jbe"]
[ext_resource type="Texture2D" uid="uid://d2h7cq1n4u1pw" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 2/2.png" id="20_lrjlf"]
[ext_resource type="Texture2D" uid="uid://chss67u56ietq" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/6.png" id="20_m3mkt"]
[ext_resource type="Texture2D" uid="uid://c4wno3okg2h5" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Idle 2/1.png" id="21_qfn5m"]
[ext_resource type="Texture2D" uid="uid://csc3ujwo7uihi" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 2/3.png" id="21_scw1j"]
[ext_resource type="Texture2D" uid="uid://oxnnc0sc5x0h" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 2/4.png" id="22_tcskf"]
[ext_resource type="Texture2D" uid="uid://dqwco1r4fs38" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 2/1.png" id="30_m00pm"]
[ext_resource type="Texture2D" uid="uid://bsmwlfh43y7m2" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 2/2.png" id="31_eyp2b"]
[ext_resource type="Texture2D" uid="uid://c74sjpcurm2pb" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 2/3.png" id="32_uuo4u"]
[ext_resource type="Texture2D" uid="uid://bnfu55xeubrrh" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 2/4.png" id="33_0cptk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6vljq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_r7s8l")
}, {
"duration": 1.0,
"texture": ExtResource("2_koc8a")
}, {
"duration": 1.0,
"texture": ExtResource("3_visub")
}, {
"duration": 1.0,
"texture": ExtResource("4_pxxj2")
}, {
"duration": 1.0,
"texture": ExtResource("5_gtvdf")
}, {
"duration": 1.0,
"texture": ExtResource("6_n5iax")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_f0dvw")
}, {
"duration": 1.0,
"texture": ExtResource("9_kraf4")
}, {
"duration": 1.0,
"texture": ExtResource("10_r5fxq")
}, {
"duration": 1.0,
"texture": ExtResource("11_dlwpw")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_un06b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qofbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg7mq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lnqxy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_6lqgv")
}, {
"duration": 1.0,
"texture": ExtResource("9_wcry7")
}, {
"duration": 1.0,
"texture": ExtResource("10_02x2e")
}, {
"duration": 1.0,
"texture": ExtResource("11_qf4qv")
}, {
"duration": 1.0,
"texture": ExtResource("12_0655c")
}, {
"duration": 1.0,
"texture": ExtResource("13_eydup")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_4diou")
}, {
"duration": 1.0,
"texture": ExtResource("20_lrjlf")
}, {
"duration": 1.0,
"texture": ExtResource("21_scw1j")
}, {
"duration": 1.0,
"texture": ExtResource("22_tcskf")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_y8f3u")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrk3o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6jf5m"]
size = Vector2(18, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_3h4t2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_wfmrl")
}, {
"duration": 1.0,
"texture": ExtResource("16_wgv3m")
}, {
"duration": 1.0,
"texture": ExtResource("17_a8p7a")
}, {
"duration": 1.0,
"texture": ExtResource("18_ioqui")
}, {
"duration": 1.0,
"texture": ExtResource("19_v1jbe")
}, {
"duration": 1.0,
"texture": ExtResource("20_m3mkt")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_m00pm")
}, {
"duration": 1.0,
"texture": ExtResource("31_eyp2b")
}, {
"duration": 1.0,
"texture": ExtResource("32_uuo4u")
}, {
"duration": 1.0,
"texture": ExtResource("33_0cptk")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_qfn5m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg1bc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_koxrv"]
size = Vector2(21, 19)

[node name="Boss" type="Node2D"]
script = ExtResource("1_a0cd8")

[node name="head_level" type="CharacterBody2D" parent="."]
collision_mask = 5
script = ExtResource("2_3x8mr")

[node name="AnimatedSprite2D_head" type="AnimatedSprite2D" parent="head_level"]
position = Vector2(4, -3)
sprite_frames = SubResource("SpriteFrames_6vljq")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="head_level"]
shape = SubResource("RectangleShape2D_qofbu")

[node name="Area_head" type="Area2D" parent="head_level"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="head_level/Area_head"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_yg7mq")

[node name="mid_level" type="CharacterBody2D" parent="."]
position = Vector2(1, 0)
collision_mask = 5
script = ExtResource("14_t42st")

[node name="AnimatedSprite2D_mid" type="AnimatedSprite2D" parent="mid_level"]
position = Vector2(-3, 18)
sprite_frames = SubResource("SpriteFrames_lnqxy")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="mid_level"]
position = Vector2(-1, 22)
shape = SubResource("RectangleShape2D_qrk3o")

[node name="Area_mid" type="Area2D" parent="mid_level"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="mid_level/Area_mid"]
position = Vector2(-3, 21.5)
shape = SubResource("RectangleShape2D_6jf5m")

[node name="ground_level" type="CharacterBody2D" parent="."]
collision_mask = 5

[node name="AnimatedSprite2D_ground" type="AnimatedSprite2D" parent="ground_level"]
position = Vector2(1, 39)
scale = Vector2(1, 0.96875)
sprite_frames = SubResource("SpriteFrames_3h4t2")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_level"]
position = Vector2(0, 44)
shape = SubResource("RectangleShape2D_kg1bc")

[node name="Area_ground" type="Area2D" parent="ground_level"]
position = Vector2(58, 19)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_level/Area_ground"]
position = Vector2(-58.5, 24.5)
shape = SubResource("RectangleShape2D_koxrv")

[node name="Timer_attack_head" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer_attack_mid" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer_attack_ground" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="animation_looped" from="head_level/AnimatedSprite2D_head" to="." method="_on_animated_sprite_2d_head_animation_looped"]
[connection signal="body_entered" from="head_level/Area_head" to="." method="_on_area_head_body_entered"]
[connection signal="animation_looped" from="mid_level/AnimatedSprite2D_mid" to="." method="_on_animated_sprite_2d_mid_animation_looped"]
[connection signal="body_entered" from="mid_level/Area_mid" to="." method="_on_area_mid_body_entered"]
[connection signal="animation_looped" from="ground_level/AnimatedSprite2D_ground" to="." method="_on_animated_sprite_2d_ground_animation_looped"]
[connection signal="body_entered" from="ground_level/Area_ground" to="." method="_on_area_ground_body_entered"]
[connection signal="timeout" from="Timer_attack_head" to="." method="_on_timer_attack_head_timeout"]
[connection signal="timeout" from="Timer_attack_mid" to="." method="_on_timer_attack_mid_timeout"]
[connection signal="timeout" from="Timer_attack_ground" to="." method="_on_timer_attack_ground_timeout"]
